Fixing AOL img border issue. Fixing test alignment issues in Outlook

--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -31,8 +31,17 @@ body {}
 //Force Outlook to provide a "view in browser" menu link.
 #outlook a {padding: 0;}
 
-//Prevent Webkit and Windows Mobile platforms from changing default font sizes, while not breaking desktop design
-body{width: 100%!important; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; margin: 0; padding: 0;}
+body {
+  //Prevent Webkit and Windows Mobile platforms from changing default font sizes, while not breaking desktop design
+  width: 100%!important;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  margin: 0;
+  padding: 0;
+
+  //Fix text align issues in Outlook 2003
+  text-align: left;
+}
 
 //Force Hotmail to display emails at full width
 .ExternalClass {width:100%;}
@@ -63,3 +72,5 @@ a[href^="tel"], a[href^="sms"] {
   cursor: default;
 }
 
+//Fixes image border issues on AOL
+img {border: none;}
